...
      }
    },
    "＋" : {
      "extractionState" : "manual",
      "shouldTranslate" : false
    },
    "＋ Chiếu câu hỏi" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "＋ Frage stellen"
          }
...
            "state" : "translated",
            "value" : "你"
          }
        }
      }
    },
    "Bạn bè" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Freunde"
          }
...
            "state" : "translated",
            "value" : "更新：2026年7月16日"
          }
        }
      }
    },
    "Câu hỏi của bạn là gì?" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Was ist deine Frage?"
          }
...
            "state" : "translated",
            "value" : "重新照亮"
          }
        }
      }
    },
    "Chiếu sáng" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ausstrahlen"
          }
...
        }
      }
    },
    "Gửi ảnh" : {

    },
    "Gửi câu trả lời" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Antwort senden"
          }
...
            "state" : "translated",
            "value" : "昨天"
          }
        }
      }
    },
    "Huỷ" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Abbrechen"
          }
...
            "state" : "translated",
            "value" : "管理员"
          }
        }
      }
    },
    "Quay lại" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Zurück"
          }
...
            "state" : "translated",
            "value" : "语音消息，发送失败"
          }
        }
      }
    },
    "Trả lời" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Antworten"
          }
...
            "state" : "translated",
            "value" : "视频发送中"
          }
        }
      }
    },
    "Viết câu trả lời của bạn…" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Schreibe deine Antwort…"
          }
...
